fix: use @me owner for gh project item-list

--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Collect project items
         env:
-          OWNER: ${{ github.repository_owner }}
+          OWNER: "@me"
           PROJECT_NUMBER: "1"
           LIMIT: "2000"
         run: |
