--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -43,6 +43,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/index.html data/project_items.json
+          git add docs/index.html
+          git add -f data/project_items.json data/repos_meta.json
           git commit -m "chore: update dashboard" || exit 0
           git push
